// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add an article 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “name”</title>
    <meta name="description" content="Edit your article “name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “name”">
    <meta property="og:description" content="Edit your article “name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <div role="alert">
            Your article is added. You can see it <a href="../00000000-0000-0000-0000-000000000000">here</a>.
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">description</textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should add an article 2`] = `
[
  "expressjs-demo",
  "/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg",
  "/tmp/express-busboy/00000000-0000-0000-0000-000000000000/00000000000000000000000000000000/00000000000000000000000000000000",
  {
    "Content-Type": "image/jpeg",
  },
]
`;

exports[`should display add an article 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Add an article</title>
    <meta name="description" content="Add an article here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <meta property="og:title" content="Add an article">
    <meta property="og:description" content="Add an article here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Add an article</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
          </div>
        </header>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required=""></textarea>
              <label for="image">Image</label>
              <input accept="image/jpeg" id="image" name="image" required="" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required=""></textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Add</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should display an article 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your article “name”</title>
    <meta name="description" content="See your article “name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000">
    <meta property="og:title" content="Your article “name”">
    <meta property="og:description" content="See your article “name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your article “name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article" role="button">Edit</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <p>description</p>
          <ul>
            <li>Created on 1/1/1970
          </li></ul>
          <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
          <div>text</div>
      </main>
  
</body></html>"
`;

exports[`should display articles 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your articles</title>
    <meta name="description" content="See your articles here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles">
    <meta property="og:title" content="Your articles">
    <meta property="og:description" content="See your articles here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your articles</h1>
          <div role="group">
                <a href="/postgres-articles/add-article" role="button">Add</a>
          </div>
        </header>
          <nav><article data-id="00000000-0000-0000-0000-000000000000">
                <img alt="" loading="lazy" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
                <h2>name</h2>
                <p>description</p>
                <div role="group">
                  <a aria-label="See your article “name”" href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                  <a aria-label="Edit your article “name”" href="/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article" role="button">Edit</a>
                  <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                    <button aria-label="Remove your article “name”" type="submit">Remove</button>
                  </form>
                </div>
              </article></nav>
      </main>
  
</body></html>"
`;

exports[`should display edit an article 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “name”</title>
    <meta name="description" content="Edit your article “name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “name”">
    <meta property="og:description" content="Edit your article “name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">description</textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should edit an article 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “new name”</title>
    <meta name="description" content="Edit your article “new name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “new name”">
    <meta property="og:description" content="Edit your article “new name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “new name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <div role="alert">
            Your article is edited. You can see it <a href="../00000000-0000-0000-0000-000000000000">here</a>.
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="new name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">new description</textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">new text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should edit an article 2`] = `
[
  "expressjs-demo",
  "/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg",
  "/tmp/express-busboy/00000000-0000-0000-0000-000000000000/00000000000000000000000000000000/00000000000000000000000000000000",
  {
    "Content-Type": "image/jpeg",
  },
]
`;

exports[`should edit an article 3`] = `
[
  "expressjs-demo",
  "/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg",
]
`;

exports[`should edit an article when image is missing 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “new name”</title>
    <meta name="description" content="Edit your article “new name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “new name”">
    <meta property="og:description" content="Edit your article “new name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “new name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <div role="alert">
            Your article is edited. You can see it <a href="../00000000-0000-0000-0000-000000000000">here</a>.
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="new name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">new description</textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">new text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should edit an article when image is not a jpeg file 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “new name”</title>
    <meta name="description" content="Edit your article “new name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “new name”">
    <meta property="og:description" content="Edit your article “new name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “new name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <div role="alert">
            Your article is edited. You can see it <a href="../00000000-0000-0000-0000-000000000000">here</a>.
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="new name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">new description</textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">new text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not add an article when an unexpected error occurred 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Add an article</title>
    <meta name="description" content="Add an article here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <meta property="og:title" content="Add an article">
    <meta property="og:description" content="Add an article here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Add an article</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
          </div>
        </header>
          <div role="alert">
            Sorry, an unexpected error occurred. Please try again later.
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">description</textarea>
              <label for="image">Image</label>
              <input accept="image/jpeg" id="image" name="image" required="" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Add</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not add an article when data are missing 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Add an article</title>
    <meta name="description" content="Add an article here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <meta property="og:title" content="Add an article">
    <meta property="og:description" content="Add an article here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Add an article</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
          </div>
        </header>
          <div role="alert">
            Please correct the following errors and submit your article again.
              <ul>
                  <li>
                    <a id="description-error" href="#description">Please provide a description with 250 characters maximum.</a>
                  </li>
                  <li>
                    <a id="image-error" href="#image">Please provide an image in jpeg format.</a>
                  </li>
                  <li>
                    <a id="name-error" href="#name">Please provide a name with 100 characters maximum.</a>
                  </li>
                  <li>
                    <a id="text-error" href="#text">Please provide a text.</a>
                  </li>
              </ul>
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="" aria-describedby="name-error">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="" aria-describedby="description-error"></textarea>
              <label for="image">Image</label>
              <input accept="image/jpeg" id="image" name="image" required="" type="file" aria-describedby="image-error">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="" aria-describedby="text-error"></textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Add</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not add an article when image is missing 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Add an article</title>
    <meta name="description" content="Add an article here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <meta property="og:title" content="Add an article">
    <meta property="og:description" content="Add an article here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Add an article</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
          </div>
        </header>
          <div role="alert">
            Please correct the following errors and submit your article again.
              <ul>
                  <li>
                    <a id="image-error" href="#image">Please provide an image in jpeg format.</a>
                  </li>
              </ul>
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">description</textarea>
              <label for="image">Image</label>
              <input accept="image/jpeg" id="image" name="image" required="" type="file" aria-describedby="image-error">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Add</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not add an article when image is not a jpeg file 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Add an article</title>
    <meta name="description" content="Add an article here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <meta property="og:title" content="Add an article">
    <meta property="og:description" content="Add an article here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Add an article</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
          </div>
        </header>
          <div role="alert">
            Please correct the following errors and submit your article again.
              <ul>
                  <li>
                    <a id="image-error" href="#image">Please provide an image in jpeg format.</a>
                  </li>
              </ul>
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">description</textarea>
              <label for="image">Image</label>
              <input accept="image/jpeg" id="image" name="image" required="" type="file" aria-describedby="image-error">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Add</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not add an article when validation failed 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Add an article</title>
    <meta name="description" content="Add an article here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <meta property="og:title" content="Add an article">
    <meta property="og:description" content="Add an article here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/add-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Add an article</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
          </div>
        </header>
          <div role="alert">
            Please correct the following errors and submit your article again.
              <ul>
                  <li>
                    <a id="description-error" href="#description">Please provide a description with 250 characters maximum.</a>
                  </li>
                  <li>
                    <a id="name-error" href="#name">Please provide a name with 100 characters maximum.</a>
                  </li>
                  <li>
                    <a id="text-error" href="#text">Please provide a text.</a>
                  </li>
                  <li>
                    <a id="image-error" href="#image">Please provide an image in jpeg format.</a>
                  </li>
              </ul>
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="" aria-describedby="name-error">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="" aria-describedby="description-error"></textarea>
              <label for="image">Image</label>
              <input accept="image/jpeg" id="image" name="image" required="" type="file" aria-describedby="image-error">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="" aria-describedby="text-error"></textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Add</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not display an article when id is invalid 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>404</title>
    <meta name="description" content="Not Found" />
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/invalid" />
    <meta property="og:title" content="404" />
    <meta property="og:description" content="Not Found" />
    <meta property="og:image" content="/icon.svg" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/invalid" />
    <link rel="stylesheet" href="/styles/main.css" />
    <link rel="icon" href="/favicon.ico" sizes="any" />
    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
    <link rel="apple-touch-icon" href="/icon.png" />
    <link rel="manifest" href="/site.webmanifest" />
    <meta name="color-scheme" content="light dark" />
    <meta name="theme-color" content="#13171f" />
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a
              href="/"
            >Home</a>
          </li>
          <li>
            <a
              href="/mongo-articles"
            >Mongo articles</a>
          </li>
          <li>
            <a
              href="/postgres-articles"
                aria-current="page"
            >Postgres articles</a>
          </li>
          <li>
            <a
              href="/contact"
            >Contact</a>
          </li>
            <li>
              <a
                href="/auth/sign-in"
              >Sign in</a>
              <span>/</span>
              <a
                href="/auth/sign-up"
              >Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="ErrorLayout">
        <div>
            <h1>404</h1>
            <p>Not Found</p>
        </div>
      </main>
  </body>
</html>"
`;

exports[`should not display an article when id is not found 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>404</title>
    <meta name="description" content="Not Found" />
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/7de2964c-6316-4549-963e-72ef1a5f163b" />
    <meta property="og:title" content="404" />
    <meta property="og:description" content="Not Found" />
    <meta property="og:image" content="/icon.svg" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/7de2964c-6316-4549-963e-72ef1a5f163b" />
    <link rel="stylesheet" href="/styles/main.css" />
    <link rel="icon" href="/favicon.ico" sizes="any" />
    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
    <link rel="apple-touch-icon" href="/icon.png" />
    <link rel="manifest" href="/site.webmanifest" />
    <meta name="color-scheme" content="light dark" />
    <meta name="theme-color" content="#13171f" />
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a
              href="/"
            >Home</a>
          </li>
          <li>
            <a
              href="/mongo-articles"
            >Mongo articles</a>
          </li>
          <li>
            <a
              href="/postgres-articles"
                aria-current="page"
            >Postgres articles</a>
          </li>
          <li>
            <a
              href="/contact"
            >Contact</a>
          </li>
            <li>
              <a
                href="/auth/sign-in"
              >Sign in</a>
              <span>/</span>
              <a
                href="/auth/sign-up"
              >Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="ErrorLayout">
        <div>
            <h1>404</h1>
            <p>Not Found</p>
        </div>
      </main>
  </body>
</html>"
`;

exports[`should not display edit an article when id is invalid 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>404</title>
    <meta name="description" content="Not Found" />
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/invalid/edit-article" />
    <meta property="og:title" content="404" />
    <meta property="og:description" content="Not Found" />
    <meta property="og:image" content="/icon.svg" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/invalid/edit-article" />
    <link rel="stylesheet" href="/styles/main.css" />
    <link rel="icon" href="/favicon.ico" sizes="any" />
    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
    <link rel="apple-touch-icon" href="/icon.png" />
    <link rel="manifest" href="/site.webmanifest" />
    <meta name="color-scheme" content="light dark" />
    <meta name="theme-color" content="#13171f" />
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a
              href="/"
            >Home</a>
          </li>
          <li>
            <a
              href="/mongo-articles"
            >Mongo articles</a>
          </li>
          <li>
            <a
              href="/postgres-articles"
                aria-current="page"
            >Postgres articles</a>
          </li>
          <li>
            <a
              href="/contact"
            >Contact</a>
          </li>
            <li>
              <a
                href="/auth/sign-in"
              >Sign in</a>
              <span>/</span>
              <a
                href="/auth/sign-up"
              >Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="ErrorLayout">
        <div>
            <h1>404</h1>
            <p>Not Found</p>
        </div>
      </main>
  </body>
</html>"
`;

exports[`should not display edit an article when id is not found 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>404</title>
    <meta name="description" content="Not Found" />
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/7de2964c-6316-4549-963e-72ef1a5f163b/edit-article" />
    <meta property="og:title" content="404" />
    <meta property="og:description" content="Not Found" />
    <meta property="og:image" content="/icon.svg" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/7de2964c-6316-4549-963e-72ef1a5f163b/edit-article" />
    <link rel="stylesheet" href="/styles/main.css" />
    <link rel="icon" href="/favicon.ico" sizes="any" />
    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
    <link rel="apple-touch-icon" href="/icon.png" />
    <link rel="manifest" href="/site.webmanifest" />
    <meta name="color-scheme" content="light dark" />
    <meta name="theme-color" content="#13171f" />
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a
              href="/"
            >Home</a>
          </li>
          <li>
            <a
              href="/mongo-articles"
            >Mongo articles</a>
          </li>
          <li>
            <a
              href="/postgres-articles"
                aria-current="page"
            >Postgres articles</a>
          </li>
          <li>
            <a
              href="/contact"
            >Contact</a>
          </li>
            <li>
              <a
                href="/auth/sign-in"
              >Sign in</a>
              <span>/</span>
              <a
                href="/auth/sign-up"
              >Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="ErrorLayout">
        <div>
            <h1>404</h1>
            <p>Not Found</p>
        </div>
      </main>
  </body>
</html>"
`;

exports[`should not edit an article when an unexpected error occurred 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “name”</title>
    <meta name="description" content="Edit your article “name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “name”">
    <meta property="og:description" content="Edit your article “name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <div role="alert">
            Sorry, an unexpected error occurred. Please try again later.
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="new name">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="">new description</textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="">new text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not edit an article when data are missing 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “name”</title>
    <meta name="description" content="Edit your article “name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “name”">
    <meta property="og:description" content="Edit your article “name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <div role="alert">
            Please correct the following errors and submit your article again.
              <ul>
                  <li>
                    <a id="description-error" href="#description">Please provide a description with 250 characters maximum.</a>
                  </li>
                  <li>
                    <a id="name-error" href="#name">Please provide a name with 100 characters maximum.</a>
                  </li>
                  <li>
                    <a id="text-error" href="#text">Please provide a text.</a>
                  </li>
              </ul>
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="name" aria-describedby="name-error">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="" aria-describedby="description-error">description</textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="" aria-describedby="text-error">text</textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not edit an article when id is invalid 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your articles</title>
    <meta name="description" content="See your articles here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles">
    <meta property="og:title" content="Your articles">
    <meta property="og:description" content="See your articles here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your articles</h1>
          <div role="group">
                <a href="/postgres-articles/add-article" role="button">Add</a>
          </div>
        </header>
          <div role="alert">
            Your article seems to not exist.
          </div>
          <nav></nav>
      </main>
  
</body></html>"
`;

exports[`should not edit an article when id is not found 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your articles</title>
    <meta name="description" content="See your articles here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles">
    <meta property="og:title" content="Your articles">
    <meta property="og:description" content="See your articles here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your articles</h1>
          <div role="group">
                <a href="/postgres-articles/add-article" role="button">Add</a>
          </div>
        </header>
          <div role="alert">
            Your article seems to not exist.
          </div>
          <nav></nav>
      </main>
  
</body></html>"
`;

exports[`should not edit an article when validation failed 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Edit your article “name”</title>
    <meta name="description" content="Edit your article “name” here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <meta property="og:title" content="Edit your article “name”">
    <meta property="og:description" content="Edit your article “name” here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Edit your article “name”</h1>
          <div role="group">
                <a href="/postgres-articles" role="button">Back to articles</a>
                <a href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                  <button type="submit">Remove</button>
                </form>
          </div>
        </header>
          <div role="alert">
            Please correct the following errors and submit your article again.
              <ul>
                  <li>
                    <a id="description-error" href="#description">Please provide a description with 250 characters maximum.</a>
                  </li>
                  <li>
                    <a id="name-error" href="#name">Please provide a name with 100 characters maximum.</a>
                  </li>
                  <li>
                    <a id="text-error" href="#text">Please provide a text.</a>
                  </li>
              </ul>
          </div>
          <form enctype="multipart/form-data" method="post">
            <fieldset>
              <label for="name">Name</label>
              <input id="name" maxlength="100" name="name" placeholder="The name of your article" required="" type="text" value="" aria-describedby="name-error">
              <label for="description">Description</label>
              <textarea id="description" maxlength="250" name="description" placeholder="The description of your article" required="" aria-describedby="description-error"></textarea>
              <label for="image">Image</label>
              <img alt="" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
              <input accept="image/jpeg" id="image" name="image" type="file">
              <label for="text">Text</label>
              <textarea id="text" name="text" placeholder="The textual content of your article" required="" aria-describedby="text-error"></textarea>
            </fieldset>
            <div role="group">
              <button type="submit">Edit</button>
            </div>
          </form>
      </main>
  
</body></html>"
`;

exports[`should not remove an article when an unexpected error occurred 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your articles</title>
    <meta name="description" content="See your articles here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles">
    <meta property="og:title" content="Your articles">
    <meta property="og:description" content="See your articles here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your articles</h1>
          <div role="group">
                <a href="/postgres-articles/add-article" role="button">Add</a>
          </div>
        </header>
          <div role="alert">
            Sorry, an unexpected error occurred. Please try again later.
          </div>
          <nav><article data-id="00000000-0000-0000-0000-000000000000">
                <img alt="" loading="lazy" src="/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg">
                <h2>name</h2>
                <p>description</p>
                <div role="group">
                  <a aria-label="See your article “name”" href="/postgres-articles/00000000-0000-0000-0000-000000000000" role="button">See</a>
                  <a aria-label="Edit your article “name”" href="/postgres-articles/00000000-0000-0000-0000-000000000000/edit-article" role="button">Edit</a>
                  <form action="/postgres-articles/00000000-0000-0000-0000-000000000000/remove-article" method="post">
                    <button aria-label="Remove your article “name”" type="submit">Remove</button>
                  </form>
                </div>
              </article></nav>
      </main>
  
</body></html>"
`;

exports[`should not remove an article when id is invalid 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your articles</title>
    <meta name="description" content="See your articles here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles">
    <meta property="og:title" content="Your articles">
    <meta property="og:description" content="See your articles here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your articles</h1>
          <div role="group">
                <a href="/postgres-articles/add-article" role="button">Add</a>
          </div>
        </header>
          <div role="alert">
            Your article seems to not exist.
          </div>
          <nav></nav>
      </main>
  
</body></html>"
`;

exports[`should not remove an article when id is not found 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your articles</title>
    <meta name="description" content="See your articles here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles">
    <meta property="og:title" content="Your articles">
    <meta property="og:description" content="See your articles here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your articles</h1>
          <div role="group">
                <a href="/postgres-articles/add-article" role="button">Add</a>
          </div>
        </header>
          <div role="alert">
            Your article seems to not exist.
          </div>
          <nav></nav>
      </main>
  
</body></html>"
`;

exports[`should remove an article 1`] = `
"<!DOCTYPE html><html lang="en"><head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Your articles</title>
    <meta name="description" content="See your articles here.">
    <link rel="canonical" href="https://www.expressjs-demo.localhost/postgres-articles">
    <meta property="og:title" content="Your articles">
    <meta property="og:description" content="See your articles here.">
    <meta property="og:image" content="/icon.svg">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://www.expressjs-demo.localhost/postgres-articles">
    <link rel="stylesheet" href="/styles/main.css">
    <link rel="icon" href="/favicon.ico" sizes="any">
    <link rel="icon" href="/icon.svg" type="image/svg+xml">
    <link rel="apple-touch-icon" href="/icon.png">
    <link rel="manifest" href="/site.webmanifest">
    <meta name="color-scheme" content="light dark">
    <meta name="theme-color" content="#13171f">
  </head>
  <body>
    <header>
      <nav>
        <ul>
          <li>
            <a href="/">
              <strong>Express.js demo</strong>
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <a href="/">Home</a>
          </li>
          <li>
            <a href="/mongo-articles">Mongo articles</a>
          </li>
          <li>
            <a href="/postgres-articles" aria-current="page">Postgres articles</a>
          </li>
          <li>
            <a href="/contact">Contact</a>
          </li>
            <li>
              <a href="/auth/sign-in">Sign in</a>
              <span>/</span>
              <a href="/auth/sign-up">Sign up</a>
            </li>
        </ul>
      </nav>
    </header>
      <main class="PageLayout">
        <header>
          <h1>Your articles</h1>
          <div role="group">
                <a href="/postgres-articles/add-article" role="button">Add</a>
          </div>
        </header>
          <div role="alert">
            Your article is removed.
          </div>
          <nav></nav>
      </main>
  
</body></html>"
`;

exports[`should remove an article 2`] = `
[
  "expressjs-demo",
  "/uploads/articles/00000000-0000-0000-0000-000000000000-image.jpg",
]
`;
